--- a/public/index.html
+++ b/public/index.html
@@ -8,5 +8,7 @@
 </head>
 <body>
     <div id="root"></div>
+    <!-- <p>Type something in the input field down below to change upper text</p>
+    <input type=text> -->
 </body>
 </html>
